--- a/quinielas_project/package.json
+++ b/quinielas_project/package.json
@@ -5,6 +5,10 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "chance": "^1.0.4",
+    "client-sessions": "^0.7.0",
+    "cookie": "^0.3.1",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -19,8 +23,11 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "~0.1.6",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.4",
+    "sails-auth": "^2.1.3",
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.1"
   },
